--- a/web-scraping-menggunakan-beautifulsoup-python-268216.html
+++ b/web-scraping-menggunakan-beautifulsoup-python-268216.html
@@ -90,7 +90,7 @@
   <header class="Header">
     
       <div class="Header__Cover">
-        <img src="https://www.notion.so/images/page-cover/met_william_morris_1877_willow.jpg">
+        <img src="https://www.notion.so/images/page-cover/solid_beige.png">
       </div>
     
     <div class="Header__Spacer ">
