--- a/port-forwarding-with-iptables-52e0a7.html
+++ b/port-forwarding-with-iptables-52e0a7.html
@@ -118,7 +118,7 @@
    -j DNAT --to-destination 192.168.0.69:27015</span></span></span></code></pre></li><li id="https://www.notion.so/1fa8183705984a9088685fccd44307dc" class="NumberedList" value="3"><span class="SemanticStringArray"><span class="SemanticString">Membuat rule masquerade pada paket yang di kembalikan</span></span><pre id="https://www.notion.so/5c4407117b2640e9b5f9159c305a252d" class="Code"><code><span class="SemanticStringArray"><span class="SemanticString"><span># iptables -t nat -A POSTROUTING -p tcp --dport 27015 -j MASQUERADE</span></span></span></code></pre></li></ol><div id="https://www.notion.so/2ac10db7950948c39398b093ddb2a9af" class="ColorfulBlock ColorfulBlock--ColorDefault Text"><p class="Text__Content"><span class="SemanticStringArray"></span></p></div></article>
   <script
       src="https://utteranc.es/client.js"
-      repo="https://github.com/abdullahainun/abdullahainun.github.io"
+      repo="abdullahainun/abdullahainun.github.io"
       issue-term="title"
       label="💬 Blog Comment"
       theme="github-light"
