--- a/dasar-teori---file-server-b5a300.html
+++ b/dasar-teori---file-server-b5a300.html
@@ -100,7 +100,7 @@
   <header class="Header">
     
       <div class="Header__Cover">
-        <img src="https://gmedia.net.id/upload/foto_artikel/201911268vYKwGSL1U.png">
+        <img src="https://www.notion.so/images/page-cover/solid_blue.png">
       </div>
     
     <div class="Header__Spacer ">
